<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/tablayout_bg"
    android:fitsSystemWindows="true"
    tools:context="com.goodmorning.ui.activity.SettingActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_56">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_back"
            android:paddingLeft="@dimen/qb_px_15"
            android:paddingRight="@dimen/qb_px_10"
            android:layout_centerVertical="true"
            android:id="@+id/iv_setting_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_centerInParent="true"
            android:textSize="19sp"
            android:text="@string/settings"
            android:textStyle="bold"/>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_60"
        android:id="@+id/rl_setting_language"
        android:background="?android:attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/qb_px_18"
            android:textColor="@color/setting_txt_tag_color"
            android:textSize="@dimen/qb_sp_15"
            android:text="@string/setting_language"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/qb_px_8"
            android:background="@drawable/ic_list_more"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textColor="@color/setting_txt_content_color"
            android:textSize="@dimen/qb_sp_12"
            android:layout_marginRight="@dimen/qb_px_35"
            android:id="@+id/setting_tv_language"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/qb_px_18"
        android:background="@color/setting_line_color"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_54"
        android:id="@+id/rl_setting_update"
        android:background="?android:attr/selectableItemBackground"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/qb_px_18"
            android:textColor="@color/setting_txt_tag_color"
            android:textSize="@dimen/qb_sp_15"
            android:text="@string/setting_update"
            android:id="@+id/setting_tv_update"/>

        <ImageView
            android:layout_width="@dimen/qb_px_5"
            android:layout_height="@dimen/qb_px_5"
            android:layout_marginTop="@dimen/qb_px_18"
            android:background="@drawable/shape_circle_bg"
            android:layout_toRightOf="@+id/setting_tv_update"
            android:visibility="visible"
            android:id="@+id/setting_iv_tip"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/qb_px_8"
            android:background="@drawable/ic_list_more"
            android:id="@+id/setting_iv_update_arraw"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textColor="@color/setting_txt_content_color"
            android:textSize="@dimen/qb_sp_12"
            android:layout_marginRight="@dimen/qb_px_35"
            android:id="@+id/setting_tv_version"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/qb_px_18"
        android:background="@color/setting_line_color"/>

    <RelativeLayout
        android:id="@+id/rl_setting_agreement"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/qb_px_18"
            android:text="@string/setting_user_agreement"
            android:textColor="@color/setting_txt_tag_color"
            android:textSize="@dimen/qb_sp_15" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/qb_px_8"
            android:background="@drawable/ic_list_more" />

        <TextView
            android:id="@+id/setting_tv_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/qb_px_35"
            android:textColor="@color/setting_txt_content_color"
            android:textSize="@dimen/qb_sp_12" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/qb_px_18"
        android:background="@color/setting_line_color"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_60"
        android:gravity="center_vertical"
        android:id="@+id/rl_setting_privacy"
        android:background="?android:attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/qb_px_18"
            android:textColor="@color/setting_txt_tag_color"
            android:textSize="@dimen/qb_sp_15"
            android:text="@string/setting_privacy"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/qb_px_8"
            android:background="@drawable/ic_list_more"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/setting_txt_content_color"
            android:textSize="@dimen/qb_sp_12"
            android:layout_marginRight="@dimen/qb_px_35"
            android:id="@+id/setting_tv_privacy"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/qb_px_18"
        android:background="@color/setting_line_color"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_60"
        android:gravity="center_vertical"
        android:id="@+id/rl_setting_quit"
        android:background="?android:attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/qb_px_18"
            android:textColor="@color/setting_txt_tag_color"
            android:textSize="@dimen/qb_sp_15"
            android:text="@string/setting_quit"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/qb_px_8"
            android:background="@drawable/ic_list_more"/>


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/qb_px_18"
        android:background="@color/setting_line_color"/>

</LinearLayout>
